--- a/index.html
+++ b/index.html
@@ -358,6 +358,6 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="src/main.js"></script>
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
