--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       <!-- CTA & Mobile button -->
       <div class="header-cta">
         <a href="#contacto" class="btn btn-gradient hide-sm">Hablemos</a>
+
+        <button id="theme-toggle" class="btn-icon" aria-label="Cambiar tema">
+          <i id="theme-icon-light" class="ph ph-sun"></i>
+          <i id="theme-icon-dark" class="ph ph-moon is-hidden"></i>
+        </button>
+
         <button id="mobile-menu-button" class="btn-icon" aria-controls="mobile-menu" aria-expanded="false">
           <span class="sr-only">Abrir menú principal</span>
           <i id="menu-open-icon" class="ph ph-list icon-24"></i>
@@ -90,9 +96,13 @@
         </div>
 
         <figure aria-label="Retrato" class="hero-figure animate-on-scroll delay-2">
+          <!-- Blobs del hero -->
           <div class="blob blob-1"></div>
           <div class="blob blob-2"></div>
-          <img src="img/foto-juan.png" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img" />
+
+          <img src="img/foto-juan.png" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-dark" />
+          <img src="img/foto-juan-light.png" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-light" />
+
           <figcaption class="hero-tags">
             <span>Branding</span><span>Estrategia</span><span>Dirección de Arte</span>
           </figcaption>
@@ -301,7 +311,7 @@
           <aside class="contact-aside animate-on-scroll delay-1">
             <div class="contact-block">
               <h3 class="h4">Contacto Directo</h3>
-              <a href="mailto:contacto@juanjavieralfaro.com" class="link-muted">contacto@juanjavieralfaro.com</a>
+              <a href="mailto:contacto@brandingconjuan.com" class="link-muted">contacto@brandingconjuan.com</a>
             </div>
             <div class="contact-block">
               <h3 class="h4">Disponibilidad</h3>
@@ -342,7 +352,7 @@
       <div>
         <h4 class="footer-title">Contacto</h4>
         <ul class="footer-list">
-          <li><a href="mailto:contacto@juanjavieralfaro.com" class="link-muted">contacto@thealfarofolio.art</a></li>
+          <li><a href="mailto:contacto@brandingconjuan.com" class="link-muted">contacto@brandingconjuan.com</a></li>
           <li class="muted">Santiago de Chile</li>
         </ul>
       </div>
