--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="blob blob-1"></div>
           <div class="blob blob-2"></div>
 
-          <img src="img/foto-juan.png" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-dark" />
-          <img src="img/foto-juan-light.png" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-light" />
+          <img src="img/foto-juan.webp" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-dark" />
+          <img src="img/foto-juan-light.webp" alt="Retrato de Juan Javier Alfaro Serrano" class="hero-img hero-img-light" />
 
           <figcaption class="hero-tags">
             <span>Branding</span><span>Estrategia</span><span>Dirección de Arte</span>
