Update styles y projects

--- a/index.html
+++ b/index.html
@@ -157,36 +157,17 @@
     </section>
 
     <!-- Galería -->
-    <section id="galeria" class="section section-alt">
-      <div class="container">
-        <header class="section-head animate-on-scroll">
-          <h2 class="h2">Galería de <span class="c-accent">Proyectos</span></h2>
-          <p class="lead-sm">Un vistazo rápido a la diversidad de mi trabajo.</p>
-        </header>
+<section id="galeria" class="section section-alt">
+  <div class="container">
+    <header class="section-head animate-on-scroll">
+      <h2 class="h2">Galería de <span class="c-accent">Proyectos</span></h2>
+      <p class="lead-sm">Un vistazo rápido a la diversidad de mi trabajo.</p>
+    </header>
 
-        <div class="gallery-grid animate-on-scroll">
-          <a href="#" class="tile tile--xl">
-            <img src="https://placehold.co/600x600/333333/E85002?text=Branding+Corp" alt="Proyecto de Branding" />
-            <div class="tile-overlay"><h3 class="tile-title">Branding Corporativo</h3></div>
-          </a>
+    <div id="galleryGrid" class="gallery-grid animate-on-scroll"></div>
+  </div>
+</section>
 
-          <a href="#" class="tile">
-            <img src="https://placehold.co/600x600/646464/F9F9F9?text=UI/UX+App" alt="Proyecto de UI/UX" />
-            <div class="tile-overlay"><h3 class="tile-title">UI/UX para App</h3></div>
-          </a>
-
-          <a href="#" class="tile">
-            <img src="https://placehold.co/600x600/A7A7A7/000000?text=Packaging" alt="Proyecto de Packaging" />
-            <div class="tile-overlay"><h3 class="tile-title">Diseño de Packaging</h3></div>
-          </a>
-
-          <a href="#" class="tile tile--wide">
-            <img src="https://placehold.co/600x300/C10801/F9F9F9?text=Web+E-commerce" alt="Proyecto Web" />
-            <div class="tile-overlay"><h3 class="tile-title">Web E-commerce</h3></div>
-          </a>
-        </div>
-      </div>
-    </section>
 
     <!-- Trabajos -->
     <section id="trabajos" class="section">
