--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <section id="sobre" class="section">
       <div class="container grid-2col gap-64">
         <div class="animate-on-scroll">
-          <img src="https://placehold.co/560x640/000000/F9F9F9?text=Proceso+Creativo" alt="Proceso creativo en estudio" class="img-rounded" />
+          <img src="img/procerso-creativo.jpg" alt="Proceso creativo en estudio" class="img-rounded" />
         </div>
         <div class="animate-on-scroll delay-1">
           <p class="mono c-accent mb-16">// Método inmersivo</p>
