Update styles gallery

--- a/index.html
+++ b/index.html
@@ -164,10 +164,11 @@
       <p class="lead-sm">Un vistazo rápido a la diversidad de mi trabajo.</p>
     </header>
 
-    <div id="galleryGrid" class="gallery-grid animate-on-scroll"></div>
+    <div id="galleryFilters"></div> <!-- opcional -->
+<div id="galleryGrid" class="gallery-grid"></div>
+
   </div>
 </section>
-
 
     <!-- Trabajos -->
     <section id="trabajos" class="section">
